src/styles/base.css
@tailwind base;

@layer base {
  /* 
    Font scale configuration
    See: https://type-scale.com/
  */

  #article > p {
    margin-bottom: 1rem;
    line-height: calc(1.125rem * 1.5);
  }

  #article h1,
  #article h2,
  #article h3,
  #article h4,
  #article h5 {
    font-weight: 400;
    margin: 0;
  }

  #article h2 {
    font-size: 1.7rem;
    font-weight: 500;
    margin-top: 2rem;
    margin-bottom: 1rem;
  }

  #article h3 {
    font-size: 1.4rem;
    margin-top: 1rem;
    margin-bottom: 0.8rem;
    font-weight: 500;
  }

  #article h4 {
    font-size: 1.2rem;
    margin-top: 1rem;
    margin-bottom: 0.8rem;
    font-weight: 500;
  }

  #article h5 {
    font-size: 1.1rem;
    margin-top: 1rem;
    margin-top: 0.8rem;
    font-weight: 500;
  }

  #article small,
  .text_small {
    font-size: 0.75rem;
  }

  #article ul {
    list-style-type: disc;
    list-style-position: outside;
    padding-left: 1rem;
    margin-bottom: 1rem;
  }

  #article ul li,
  #article ol li {
    margin-bottom: 0.5rem;
  }

  #article ol {
    list-style-type: decimal;
    list-style-position: outside;
    padding-left: 1rem;
    margin-bottom: 1rem;
  }

  #article pre {
    margin-block: 1rem;
  }

  #article a {
    text-decoration: underline;
    text-underline-offset: 2px;
    text-decoration-color: #d1d5db;
    transition: all 150ms;
  }

  #article a:hover {
    text-decoration-color: #2563eb;
  }

  #article p > code,
  #article li > code {
    font-family: "IBM Plex Mono", monospace;
    font-weight: 500;
    font-size: 14px;
    padding: 2px 4px;
    border-radius: 3px;
    background-color: #f3f4f6;
  }
}

